# crewai-box-agent

./: .auth.ccg.db  .env.example  README.md  pyproject.toml
knowledge/: user_preference.txt
src/box_ai_agent_toolkit/: crew.py  main.py
src/box_ai_agent_toolkit/config/: agents.yaml  tasks.yaml
src/box_ai_agent_toolkit/tools/: custom_tool.py
